add set(CMAKE_INCLUDE_CURRENT_DIR ON) to cmakefile

--- a/qtTests/CMakeLists.txt
+++ b/qtTests/CMakeLists.txt
@@ -4,6 +4,7 @@ project(unitTest LANGUAGES CXX)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
 enable_testing()
 
 add_definitions(-DQUICK_TEST_SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
